Separated ansible and waiting-room
